--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,10 +1,6 @@
 name: Android CI
 
-on:
-  push:
-    branches: [ github-ci-test ]
-  pull_request:
-    branches: [ github-ci-test ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -17,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        submodules: recursive
+
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
