--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,7 @@ jobs:
         fetch-depth: 0
         submodules: recursive
 
-    - name: set up JDK 1.8
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
@@ -27,14 +27,18 @@ jobs:
     - name: Sign APK
       uses: jobobby04/sign-android-release@v1.0.3
       with:
-        releaseDirectory: app/build/outputs/apk/release
+        releaseDirectory: ./src/emu/android/app/build/outputs/apk/release
         signingKeyBase64: ${{ secrets.SIGNING_KEY }}
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
         keyPassword: ${{ secrets.KEY_PASSWORD }}
 
+    - name: Compute git short sha
+      id: git_short_sha
+      run: echo "::set-output name=value::$(git rev-parse --short HEAD)"
+
     - name: Upload APK
       uses: actions/upload-artifact@v1
       with:
-        name: app
+        name: eka2l1-${{ steps.git_short_sha.outputs.value }}
         path: $SIGNED_RELEASE_FILE
